fixed stock code issue and implemented email trigger

--- a/HedgeFundProject/app/views/portfolio/dashboard.scala.html
+++ b/HedgeFundProject/app/views/portfolio/dashboard.scala.html
@@ -119,10 +119,10 @@ div.tooltip {
                         }
 
                         <h1>@rule</h1>
-<!--                        <form action="@routes.HomeController.getRule()">-->
+<!--                        <form action="">-->
 <!--                            <input type="submit" value="Get Rules" />-->
 <!--                        </form>-->
-<!--                        <button class="btn btn-primary" onclick="@routes.HomeController.getRule()">Get Rules</button>-->
+<!--                        <button class="btn btn-primary" onclick="">Get Rules</button>-->
 <!--                        <form method="post" action="@routes.HomeController.addPortfolioToDB()">-->
 <!--                        <div class="form-group">-->
 <!--                            <label for="parm1">Please select the Company you want</label>-->
