--- a/HedgeFundProject/app/views/portfolio/recommendation.scala.html
+++ b/HedgeFundProject/app/views/portfolio/recommendation.scala.html
@@ -104,8 +104,8 @@ div.tooltip {
                 <div class="col-lg-12">
                     <div id="recommendation" >
                         <h1>Get Recommendation !!</h1>
-                        <form action="@routes.HomeController.getRule()">
-                            <select>
+                        <form action="/getRule">
+                            <select name="stockCheck">
                                 <option value="AAPL">APPLE</option>
                                 <option value="MSFT">Microsoft</option>
                                 <option value="IBM">IBM</option>
