UI changes and controller clean up

--- a/HedgeFundProject/app/views/credentials/signup.scala.html
+++ b/HedgeFundProject/app/views/credentials/signup.scala.html
@@ -3,14 +3,16 @@
 @main("Details") {
 @defining(play.core.PlayVersion.current) { version =>
     <body class="landing-page">
+        <h1 style="color:red; text-align:center">Sign UP</h1>
         <div id="right-signup">
             @helper.form(action=routes.HomeController.validateSignUp()){
                 @helper.CSRF.formField
                 <p style="color: #2d2d2d; font-family:Arial; text-align: center; font-size: 12px">@flash.get("error")</p>
-                @helper.inputText(signUpData("Name"), '_label -> null, 'placeholder -> "First Name & Last Name...", '_showConstraints -> false)
-                @helper.inputText(signUpData("Email"), '_label -> null, 'placeholder -> "Email...", '_showConstraints -> false)
-                @helper.inputText(signUpData("Username"), '_label -> null, 'placeholder -> "Username...", '_showConstraints -> false)
-                @helper.inputPassword(signUpData("Password"), '_label -> null, 'placeholder -> "Password...", '_showConstraints -> false)
+                @helper.inputText(signUpData("Username"), '_label -> null, 'placeholder -> "Username", '_showConstraints -> false)
+                @helper.inputPassword(signUpData("Password"), '_label -> null, 'placeholder -> "Password", '_showConstraints -> false)
+                @helper.inputText(signUpData("Name"), '_label -> null, 'placeholder -> "Full Name", '_showConstraints -> false)
+                @helper.inputText(signUpData("Email"), '_label -> null, 'placeholder -> "Email", '_showConstraints -> false)
+
                 <input type="submit" value="Sign-Up"/>
             }
         </div>
