--- a/HedgeFundProject/app/views/credentials/login.scala.html
+++ b/HedgeFundProject/app/views/credentials/login.scala.html
@@ -3,12 +3,13 @@
  @main("Login") {
  @defining(play.core.PlayVersion.current) { version =>
     <body class="landing-page">
-        <div id="right">
+        <h1 style="color:red; text-align:center">Login</h1>
+        <div id="right-signup">
             @helper.form(action=routes.HomeController.validateLogin()){
                 @helper.CSRF.formField
                 <p style="color: #2d2d2d; font-family:Arial; text-align: center; font-size: 12px">@flash.get("error")</p>
-                @helper.inputText(loginForm("Username"), '_label -> null, 'placeholder -> "Your username..", '_showConstraints -> false)
-                @helper.inputPassword(loginForm("Password"), '_label -> null, 'placeholder -> "Your password..", '_showConstraints -> false)
+                @helper.inputText(loginForm("Username"), '_label -> null, 'placeholder -> "Enter username", '_showConstraints -> false)
+                @helper.inputPassword(loginForm("Password"), '_label -> null, 'placeholder -> "Enter password", '_showConstraints -> false)
                 <input type="submit" value="Login"/>
             }
         </div>
