basic logout button functionality

--- a/HedgeFundProject/app/views/portfolio/recommendation.scala.html
+++ b/HedgeFundProject/app/views/portfolio/recommendation.scala.html
@@ -92,6 +92,7 @@ div.tooltip {
             <li>
                 <a href="recommendation">Get Recommendation</a>
                 <a href="dashboard" id="showDashboard">Dashboard</a>
+                <a href="/">Logout</a>
             </li>
         </ul>
     </div>
