added view and edit func for portfolio

--- a/HedgeFundProject/app/views/portfolio/dashboard.scala.html
+++ b/HedgeFundProject/app/views/portfolio/dashboard.scala.html
@@ -92,7 +92,8 @@ div.tooltip {
             </li>
             <li>
                 <a href="recommendation">Get Recommendation</a>
-                <a href="dashboard" id="showDashboard">Dashboard</a>
+                <a href="dashboard" id="showDashboard">Add Portfolio</a>
+                <a href="viewandedit">View Portfolio</a>
                 <a href="/">Logout</a>
             </li>
         </ul>
