ui changed from select to input

--- a/HedgeFundProject/app/views/portfolio/dashboard.scala.html
+++ b/HedgeFundProject/app/views/portfolio/dashboard.scala.html
@@ -120,7 +120,7 @@ div.tooltip {
                         <input type="submit" value="add to Portfolio"/>
                         }
 
-                        <h1>@rule</h1>
+                        <h1>Recommendation: @rule</h1>
 <!--                        <form action="">-->
 <!--                            <input type="submit" value="Get Rules" />-->
 <!--                        </form>-->
