sql scripts added and ui changes

--- a/HedgeFundProject/app/views/portfolio/viewandedit.scala.html
+++ b/HedgeFundProject/app/views/portfolio/viewandedit.scala.html
@@ -119,7 +119,7 @@ div.tooltip {
                             <input type="text" name="rule" id="rule" value="@rule">
 
                             <br>
-                            <input class="btn btn-primary" value="Remove Portfolio" type="submit"></input>
+                            <input class="btn btn-primary" value="Update Portfolio" type="submit"></input>
                         </div>
                         </form>
                     </div>
